See also LICENSE.txt

Silva changes

  Silva 2.1.7 (unreleased)

    Bug fixes

      - Fix an xml export error which happened when you export ghosts
        object which refer links which are not available anymore.

      - Safely completely ignore errors on Image resize / crop, so no
        error happens when using zip import (revert a fix from 2.1.6).

      - Add a content-type for BMP and TIFF images in image support.

      - The user clipboard 'remove user' button now returns to the
        correct add user form.

      - Fix tocfilter if somehow non Silva object go through it.

      - Fix a bug if a view is used as return_to value in
        quick_publish.

      - Define a correct interface for SimpleMember which define the
        protocol to edit a user.

      - Fix link edition, when you change link type, the URL is set
        according the new link type rule.

      - Fix authentication on tab_preview (only to get one login form,
        and not one per frame).

  Silva 2.1.6 (2009-08-05)

    Bug fixes

      - Errors when attempting to create thumbnails from interlaced
        PNGs are now displayed to the user.

      - launchpad 400019: Silva Link: allow editing of relative /
        absolute property.  The Silva Link edit tab now allow editing
        of this property

      - ported form the trunk. A possible security issue, the "served by host foo" comment
        was removed from macro_index.pt.

      - removing with on the table class selector in the kupu toolbar
        so it is visible now in IE7

      - updating the table structure and css for the table class
        selector in the kupu toolbox so everything is aligned evenly

  Silva 2.1.5 (2009-07-29)

    Bug fixes

      - Get reference button did not work for a Ghost folder.

      - Add a traverser to a non-existant view on RessourceDirectory
        to get a 404 instead of an error.

      - Discard CodeSource parameter which are unknown in SilvaDocument